[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core",
]

[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
idna = "2.8"
setuptools = "69.5.1"
pygments = "2.15.0"
jinja2 = "3.1.4"
python = "3.9.17"
python-magic = "0.4.27"
pyyaml = "5.4"
redis = "3.3.10"